src/Test/Fixtures/Good/TypeQualifier/scratchLinearStackedLines.lf
let scratch
linear
q: qubit = qalloc();
