src/Test/Fixtures/Bad/TypeQualifier/doubleLinearQubit.lf
let linear linear q: qubit = qalloc();
